--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,7 @@ jobs:
       contents: write
     steps:
     - uses: actions/checkout@v3
+    - run: npm run build 
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "dist/particle-processing-rk.js"
